# mvc-service

./: LICENSE  README.md  TODO.md  mvc-service.cabal  stack.yaml
benchmark/: Bench.hs
benchmark/MVC/: ServiceBench.hs
executable/: Example.hs  SocketTestServer.hs
test-suite/: Tasty.hs
