Name:                     mvc-service
Version:                  0.1
Synopsis:                 MVC Service
Description:              MVC Service
License:                  MIT
License-File:             LICENSE
Author:                   Chris Mahon
Maintainer:               cnmahon@gmail.com
Copyright:                Chris Mahon 2014
Category:                 Concurrency
Build-Type:               Simple
Stability:                Experimental
Cabal-Version:            >= 1.10

Source-Repository         head
  type:                   git
  location:               git://github.com/cmahon/mvc-service.git

Library
  hs-source-dirs:         library
  ghc-options:            -Wall -O2 -threaded
  default-language:       Haskell2010
  exposed-modules:        MVC.Event,
                          MVC.EventHandler,
                          MVC.Model,
                          MVC.Service
  -- other-modules:          
  build-depends:          base >= 4 && < 5,
                          async >= 2.0.1.4,
                          lens-family-core >= 1.0.0,
                          mtl >= 2.0.1.0 && < 2.2,
                          mvc >= 1.0.0,
                          pipes >= 4.1.0,
                          pipes-concurrency >= 2.0.2,
                          profunctors >= 4.0.0,
                          stm >= 2.4.2,
                          transformers >= 0.2.0.0 && < 0.4 

Executable example
  main-is:                Example.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fno-warn-orphans
  hs-source-dirs:         executable
  build-depends:          base >= 4 && < 5,
                          async >= 2.0.1.4,
                          mvc >= 1.0.0,
                          mvc-service >= 0.1,
                          pipes >= 4.1.0,
                          pipes-concurrency >= 2.0.2,
                          profunctors >= 4.0.0,
                          stm >= 2.4.2

test-suite tasty
  main-is:                Tasty.hs
  build-depends:          base >= 4, tasty, tasty-hunit, tasty-quickcheck, tasty-smallcheck
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0

test-suite doctest
  main-is:                DocTest.hs
  build-depends:          base, Glob == 0.*, doctest == 0.*
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0

test-suite hpc
  main-is:                HPC.hs
  build-depends:          base, process == 1.*, regex-compat == 0.*
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0

test-suite haddock
  main-is:                Haddock.hs
  build-depends:          base, process == 1.*, regex-compat == 0.*
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0

test-suite hlint
  main-is:                HLint.hs
  build-depends:          base, hlint == 1.8.*
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0

benchmark benchmarks
  main-is:                Bench.hs
  build-depends:          base,
                          mvc-service >= 0.1,
                          criterion == 0.*
  default-language:       Haskell2010
  hs-source-dirs:         benchmark
  type:                   exitcode-stdio-1.0