Name:                     mvc-service
Version:                  0.1
Synopsis:                 MVC Service
Description:              MVC Service
License:                  BSD3
License-File:             LICENSE
Author:                   Chris Mahon
Maintainer:               cnmahon@gmail.com
Copyright:                Chris Mahon 2014
Category:                 Concurrency
Build-Type:               Simple
Stability:                Experimental
Cabal-Version:            >= 1.10

Source-Repository         head
  type:                   git
  location:               git://github.com/cmahon/mvc-service.git

Library
  hs-source-dirs:         library
  ghc-options:            -Wall -O2 -threaded -fno-warn-orphans
  default-language:       Haskell2010
  exposed-modules:        MVC.Event,
                          MVC.EventHandler,
                          MVC.Service,
                          MVC.Socket
  build-depends:          base,
                          async,
                          bytestring,
                          data-default,
                          hslogger,
                          hslogger-template,
                          lens,
                          mtl,
                          mvc,
                          network-simple,
                          pipes,
                          pipes-concurrency,
                          pipes-network,
                          profunctors,
                          stm,
                          transformers

Executable example
  main-is:                Example.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded
  hs-source-dirs:         executable
  build-depends:          base,
                          async,
                          mvc,
                          mvc-service,
                          pipes,
                          pipes-concurrency,
                          profunctors,
                          stm

Executable sockettestclient
  main-is:                SocketTestClient.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  hs-source-dirs:         executable
  build-depends:          base,
                          async,
                          bytestring,
                          data-default,
                          hslogger,
                          hslogger-template,
                          lens,
                          mtl,
                          mvc,
                          mvc-service,
                          network-simple,
                          pipes,
                          pipes-concurrency,
                          pipes-network,
                          profunctors,
                          stm,
                          transformers

Executable sockettestserver
  main-is:                SocketTestServer.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  hs-source-dirs:         executable
  build-depends:          base,
                          async,
                          bytestring,
                          network,
                          stm

test-suite tasty
  main-is:                Tasty.hs
  build-depends:          base >= 4, tasty, tasty-hunit, tasty-quickcheck, tasty-smallcheck
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0